Fixed alignment of toggle switch and text

--- a/styles/User.module.scss
+++ b/styles/User.module.scss
@@ -88,7 +88,7 @@
             :global(.toogleSwitch) {
               @include flexbox;
               @include align-items (center);
-              :global(label) {
+              :global(.form-label) {
                 margin: 0 7px 0 0;
               }
               :global(.switchText) {
